----------------------------------------------------------------------
Fri Jul 16 17:59:48 2004                        Michael Jennings (mej)

If $LANG refers to a UTF-8 or similar locale, remove that part.  In
other words, en_US.utf8 becomes en_US instead.
----------------------------------------------------------------------
Fri Jul 23 12:21:25 2004                        Michael Jennings (mej)

Kirby Kuehl <vacuum@technotronic.com> pointed out some portability
issues.  These should now be fixed.
----------------------------------------------------------------------
Fri Jul 23 12:27:18 2004                        Michael Jennings (mej)

Oops, missed one. :(
----------------------------------------------------------------------
Wed Nov  3 18:17:52 2004                        Michael Jennings (mej)

Small patch for building against libast 0.6.1.

Fixed compile error when enabling OFFIX_DND support pointed out by JG
Miller <miller@yoyo.org>.
----------------------------------------------------------------------
Sun Nov  7 15:37:43 2004                        Michael Jennings (mej)

Fixed minor typo.
----------------------------------------------------------------------
Tue Dec 14 17:13:02 2004                        Michael Jennings (mej)

0.9.3 release
----------------------------------------------------------------------
Tue Dec 14 17:22:23 2004                        Michael Jennings (mej)

The benefits of being a passenger on a long road trip...  The
beginnings of EWMH opacity (a la xcompmgr) support and (hopefully)
UTF-8 support.  Both as yet untested.
----------------------------------------------------------------------
Fri Dec 17 16:35:31 2004                        Michael Jennings (mej)

Another attempt (and failure) at UTF-8 support.  Disabled until
someone can help me out.

If you know iconv(), please have a look at the FIXME_BLOCK starting at
line 3509 of src/command.c.
----------------------------------------------------------------------